progetto segreteria spring

--- a/src/main/resources/templates/aggiungicorso.html
+++ b/src/main/resources/templates/aggiungicorso.html
@@ -8,6 +8,13 @@
 <title>Aggiungi Corso</title>
 </head>
 <body>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item" aria-current="page"><a href="#" th:href="@{/homecorso}">Home </a></li>
+    <li class="breadcrumb-item" aria-current="page"><a href="#" th:href="@{/corsi}">Corsi</a></li>
+    <li class="breadcrumb-item" aria-current="page"><a href="#" th:href="@{/studenti}">Studenti</a></li>
+  </ol>
+</nav>
 
 <div class="container text-center">
   <h1>Universita Atlantide</h1>
