--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,13 @@
 <title>Segreteria Spring</title>
 </head>
 <body>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item active" aria-current="page">Home</li>
+    <li class="breadcrumb-item" aria-current="page"><a href="#" th:href="@{/corsi}">Corsi</a></li>
+    <li class="breadcrumb-item"><a href="#" th:href="@{/studenti}" >Studenti</a></li>
+  </ol>
+</nav>
 
 <div class="container text-center mb-4">
   <h1>Universita Atlantide</h1>
