--- a/src/main/resources/templates/corsigest.html
+++ b/src/main/resources/templates/corsigest.html
@@ -8,6 +8,13 @@
 <title>Gestione corsi</title>
 </head>
 <body>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item" aria-current="page"><a href="#" th:href="@{/homecorso}">Home </a></li>
+    <li class="breadcrumb-item active" aria-current="page">Corsi</a></li>
+    <li class="breadcrumb-item"><a href="#" th:href="@{/studenti}" >Studenti</a></li>
+  </ol>
+</nav>
 
 <div class="container text-center">
   <h1>Universita Atlantide</h1>
