--- a/src/main/resources/templates/errorView.html
+++ b/src/main/resources/templates/errorView.html
@@ -6,6 +6,13 @@
 <title>Errore</title>
 </head>
 <body>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item" aria-current="page"><a href="#" th:href="@{/homecorso}">Home </a></li>
+    <li class="breadcrumb-item" aria-current="page"><a href="#" th:href="@{/corsi}">Corsi</a></li>
+    <li class="breadcrumb-item" aria-current="page"><a href="#" th:href="@{/studenti}">Studenti</a></li>
+  </ol>
+</nav>
 <div class="container text-center">
   <h1>Universita Atlantide</h1>
   </div>
