--- a/src/main/resources/templates/studentigest.html
+++ b/src/main/resources/templates/studentigest.html
@@ -8,7 +8,13 @@
 <title>Pagina Studenti</title>
 </head>
 <body>
-
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item" aria-current="page"><a href="#" th:href="@{/homecorso}">Home </a></li>
+    <li class="breadcrumb-item" aria-current="page"><a href="#" th:href="@{/corsi}">Corsi</a></li>
+    <li class="breadcrumb-item active">Studenti</li>
+  </ol>
+</nav>
 <div class="container text-center">
   <h1>Universita Atlantide</h1>
   </div>
