--- a/src/main/resources/templates/aggiornacorso.html
+++ b/src/main/resources/templates/aggiornacorso.html
@@ -42,6 +42,7 @@
 	   <div class="form-group row">
 	    <div class="col-sm-3">
 	N. Esami <input class ="form-control" type="text" th:field="*{numeroEsami}" required>
+	<span th:if="${#fields.hasErrors('numeroEsami')}" th:errors="*{numeroEsami}"></span>
 	</div>
 	   </div>
 	   
