--- a/src/main/resources/templates/aggiungicorso.html
+++ b/src/main/resources/templates/aggiungicorso.html
@@ -39,7 +39,8 @@
 	   </div>
    	   <div class="form-group row">
 	    <div class="col-sm-3">
-   		N. Esami<input class="form-control" type="text" th:field="*{numeroEsami}" required> 
+   		N. Esami<input class="form-control" id="numeroEsami" type="text" th:field="*{numeroEsami}" required> 
+   		<span th:if="${#fields.hasErrors('numeroEsami')}" th:errors="*{numeroEsami}"></span>
    		</div>
 	   </div>
      <input type="submit" value="Aggiungi">
