piccolo aggiornamento grafica

--- a/src/main/resources/templates/aggiornacorso.html
+++ b/src/main/resources/templates/aggiornacorso.html
@@ -8,6 +8,10 @@
 <title>Pagina Aggiornamento Corso</title>
 </head>
 <body>
+<nav class="navbar navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Universita
+  </a>
+</nav>
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item" aria-current="page"><a href="#" th:href="@{/homecorso}">Home </a></li>
