--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,10 @@
 <title>Segreteria Spring</title>
 </head>
 <body>
+<nav class="navbar navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Universita
+  </a>
+</nav>
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item active" aria-current="page">Home</li>
@@ -26,7 +30,7 @@
 <a href="#" class="btn btn-info"  th:href="@{/corsi}">Gestione Corsi di Laurea</a> <br>
 </div>
 </div>
-<div class="footer bg-secondary p-2 text-center mt-5">
+<div class="footer fixed-bottom bg-secondary p-2 text-center mt-5">
 			<p>copyright &copy; Powered by  Epicode School<p>
 		</div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
