--- a/src/main/resources/templates/studentegiaesistente.html
+++ b/src/main/resources/templates/studentegiaesistente.html
@@ -6,6 +6,10 @@
 <title>Studente esistente</title>
 </head>
 <body>
+<nav class="navbar navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Universita
+  </a>
+</nav>
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item" aria-current="page"><a href="#" th:href="@{/homecorso}">Home </a></li>
@@ -23,7 +27,7 @@
 <a href="#" class="btn btn-info" th:href="@{/studenti}">Torna agli Studenti</a>
 <a href="#" class="btn btn-info" th:href="@{/homestud}">Torna alla home</a>
 </div>
-<div class="footer bg-secondary p-2 text-center mt-2">
+<div class="footer fixed-bottom bg-secondary p-2 text-center mt-2">
 			<p>copyright &copy; Powered by Epicode School<p>
 		</div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
