--- a/src/main/resources/templates/corsogiaesistente.html
+++ b/src/main/resources/templates/corsogiaesistente.html
@@ -6,6 +6,10 @@
 <title>Verifica corso</title>
 </head>
 <body>
+<nav class="navbar navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Universita
+  </a>
+</nav>
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item" aria-current="page"><a href="#" th:href="@{/homecorso}">Home </a></li>
