--- a/src/main/resources/templates/corsogiaesistente.html
+++ b/src/main/resources/templates/corsogiaesistente.html
@@ -26,7 +26,7 @@
 <div class="container text-center">
 <a class="btn btn-info" href="#" th:href="@{/corsi}">Torna ai corsi</a>
 </div>
-<div class="footer bg-secondary p-2 text-center mt-2">
+<div class="footer  fixed-bottom bg-secondary p-2 text-center mt-2">
 			<p>copyright &copy; Powered by Epicode School<p>
 		</div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
