--- a/src/main/resources/templates/studentigest.html
+++ b/src/main/resources/templates/studentigest.html
@@ -22,19 +22,18 @@
 <div class="container text-center">
   <h1>Universita Atlantide</h1>
   </div>
-
-<header><h1 class="text-center"> ELENCO STUDENTI</h1> </header>
 <div class="intro">
+<header><h1 class="text-center"> ELENCO STUDENTI</h1> </header>
 <table class="table table-hover table-sm">
 	<tr>
-	<th><h4>Matricola Studente</h4></th> 
-	<th><h4>Nome</h4></th>
-	<th><h4>Cognome</h4></th>
-	<th><h4>Email</h4></th>
-	<th><h4>Data di Nascita</h4></th>
-	<th><h4>Indirizzo</h4></th>
-	<th><h4>Citta</h4></th>
-	<th><h4>Corso Frequentato</h4></th>
+	<th>Matricola Studente</th> 
+	<th>Nome</th>
+	<th>Cognome</th>
+	<th>Email</th>
+	<th>Data di Nascita</th>
+	<th>Indirizzo</th>
+	<th>Citta</th>
+	<th scope="col">Corso Frequentato</th>
 	</tr>
 	   <div th:each="studente: ${database.getStudenti()}">
    		<tr>
